@startuml ER 

class Student {
    *st_id : INT
    --
    username : STRING
    password : STRING
    email : STRING
    points : INT
    food_distributed : INT
}
class Advertisment {
    *ad_id : INT
    --
    date_posted : DATE 
    quantity : INT
    path_to_picture : STRING
    allergies : VARCHAR
    state : VARCHAR
}
class Admin {
    *admin_id : INT
    --
    username : STRING
    password : STRING
}
class Request {
    *ad_id : INT
    *con_id : INT
    --
    success : ENUM
}
class Rating {
    *req_id : INT
    --
    description : TEXT 
}

class Location{
    *ad_id : INT
    --
    longtitude : DOUBLE
    lantitude : DOUBLE 
}

Student --> Advertisment : posts
Student --> Advertisment : edits
Student --> Advertisment : deletes
Advertisment --> Advertisment : deletes
Student --> Request : files
Request --> Advertisment : allocates
Student --> Request : approves/rejects
Request --> Rating : creates
Student --> Rating : writes
Rating --> Student : penalty
Rating --> Student : rewards
Advertisment --> Location : has a
Admin --> Request : views statistics
Admin --> Student : views leaderboard
@enduml 